# pmlxzj

./: .gitignore  Makefile  README.md  meson.build
docs/: exe_player_spec.adoc  format.md  password.py  pmlxzj.py
lib/: alg.c  audio.c  bmp.c  bmp.h  color.h  err.c  gdi.h  image.c  image.h  iter.c  log.c  log.h  macro.h  parser.c  threadname.c  threadname.h  threadpool.c  threadpool.h  txts.c  utils.c  utils.h  video.c
lib/include/: alg.h  defs.h  err.h  iter.h  log.h  parser.h  serialized.h  structs.h  video.h
lib/include/platform/: endian.h  tls.h
lib/platform/: c11threads.h  c11threads_win32.c  nowide.c  nowide.h  nproc.c  nproc.h  stdbit.h
meson/: i686-w64-mingw32.txt  x86_64-w64-mingw32.txt
mk/: flags.mk
resources/: plzj.rc
src/: debug.c  debug.h  plzj.c  pmlxzj.c
